--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "date-fns": "^2.8.1",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
