--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^16.8.6",
     "react-icons": "^3.6.1",
     "react-redux": "^7.0.2",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "5.1.2",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
